<resources>
    <string name="app_name">应用锁</string>

    <string name="lock_first_btn" formatted="false">保护(%s)</string>

    <!--图形解锁控件相关-->
    <string name="lockscreen_access_pattern_cell_added">已添加单元格</string>
    <string name="lockscreen_access_pattern_start">绘制解锁图案</string>
    <string name="lockscreen_access_pattern_detected">密码已保存</string>
    <string name="lockscreen_access_pattern_cleared">密码已删除</string>

    <string name="lock_recording_intro_header">设置应用程序的解锁密码</string>
    <string name="lock_settings_help_how_to_record">如何绘制解锁图案</string>
    <string name="lock_recording_incorrect_too_short">应连接至少4个点。</string>
    <string name="lock_pattern_entered_header">记录密码</string>
    <string name="lock_need_to_confirm">再次绘制图案以确认</string>
    <string name="lock_need_to_unlock_wrong">密码不匹配，请重试。</string>
    <string name="password_gestrue_tips">绘制密码解锁</string>
    <string name="password_error_count">密码不匹配。请重试。</string>
    <string name="lock_draw_unlock_pattern">画出解锁路径</string>
    <string name="lock_enter_pin_code">输入数字密码</string>
    <string name="lock_pattern_confirmed_header"></string>

    <!--数字解锁相关-->
    <string name="num_create_text_01">输入4位数密码即可解锁</string>
    <string name="num_create_text_02">再次输入以确认</string>
    <string name="num_create_text_03">密码不匹配，请重试</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="password_short">请输入至少4个字符。</string>

    <string-array name="lock_time_array">
        <item>15 秒</item>
        <item>30 秒</item>
        <item>1 分钟</item>
        <item>3 分钟</item>
        <item>5 分钟</item>
        <item>10 分钟</item>
        <item>30 分钟</item>
    </string-array>

    <string name="dialog_tip">你的系统大于等于5.0，我们需要获取 “查看应用使用情况” 权限\n
        同时，为了让程序一直在后台运行，还需获取 “通知栏” 权限。
    </string>
</resources>
