<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/num_lock_layout"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="bottom|center_horizontal"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_cycle"
        android:layout_width="300dp"
        android:layout_height="26dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/num_point_1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/num_point"/>

        <ImageView
            android:id="@+id/num_point_2"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/num_point"/>

        <ImageView
            android:id="@+id/num_point_3"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/num_point"/>

        <ImageView
            android:id="@+id/num_point_4"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/num_point"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/number_1"
            android:fontFamily="sans-serif-light"
            style="@style/lock_num_style"
            android:text="@string/number_1"/>

        <TextView
            android:id="@+id/number_2"
            android:fontFamily="sans-serif-light"
            style="@style/lock_num_style"
            android:layout_centerHorizontal="true"
            android:text="@string/number_2"/>

        <TextView
            android:id="@+id/number_3"
            style="@style/lock_num_style"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_num_cycle"
            android:text="@string/number_3"/>

        <TextView
            android:id="@+id/number_4"
            style="@style/lock_num_style"
            android:fontFamily="sans-serif-light"
            android:layout_below="@id/number_1"
            android:layout_marginTop="10dp"
            android:text="@string/number_4"/>

        <TextView
            android:id="@+id/number_5"
            android:fontFamily="sans-serif-light"
            style="@style/lock_num_style"
            android:layout_below="@id/number_2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/number_5"/>

        <TextView
            android:id="@+id/number_6"
            android:fontFamily="sans-serif-light"
            style="@style/lock_num_style"
            android:layout_alignParentRight="true"
            android:layout_below="@id/number_3"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:text="@string/number_6"/>

        <TextView
            android:fontFamily="sans-serif-light"
            android:id="@+id/number_7"
            style="@style/lock_num_style"
            android:layout_below="@+id/number_4"
            android:layout_marginTop="10dp"
            android:text="@string/number_7"/>

        <TextView
            android:id="@+id/number_8"
            style="@style/lock_num_style"
            android:fontFamily="sans-serif-light"
            android:layout_below="@+id/number_5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/number_8"/>

        <TextView
            android:id="@+id/number_9"
            android:fontFamily="sans-serif-light"
            style="@style/lock_num_style"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/number_6"
            android:layout_marginTop="10dp"
            android:text="@string/number_9"/>

        <TextView
            android:id="@+id/number_none"
            style="@style/lock_num_style"
            android:layout_below="@id/number_7"
            android:layout_marginTop="10dp"
            android:text="@string/number_0"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/number_0"
            style="@style/lock_num_style"
            android:fontFamily="sans-serif-light"
            android:layout_below="@id/number_8"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/number_0"/>

        <ImageView
            android:id="@+id/number_del"
            style="@style/lock_num_style"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:layout_below="@id/number_9"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/number_del"/>

    </RelativeLayout>

</LinearLayout>